[gd_scene load_steps=19 format=2]

[ext_resource path="res://source/scenes/game/plinth.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/scenes/game/hand.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/font_72pt.tres" type="DynamicFont" id=3]
[ext_resource path="res://source/scenes/game/stack.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/scenes/game/game.gd" type="Script" id=5]
[ext_resource path="res://source/scenes/game/discard.tscn" type="PackedScene" id=6]
[ext_resource path="res://source/scenes/game/camera.gd" type="Script" id=7]
[ext_resource path="res://source/scenes/game/heart.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sprites/hearts_full.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/hearts_empty.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/opponents/chicomecoatl_portrait.png" type="Texture" id=11]
[ext_resource path="res://assets/materials/portrait.material" type="Material" id=12]
[ext_resource path="res://assets/sprites/speech.png" type="Texture" id=13]
[ext_resource path="res://source/scenes/game/speech_bubble.gd" type="Script" id=14]
[ext_resource path="res://assets/backgrounds/game_background.png" type="Texture" id=15]
[ext_resource path="res://source/components/scroll.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/themes/game.theme" type="Theme" id=17]
[ext_resource path="res://source/helpers/screen_space.tscn" type="PackedScene" id=18]

[node name="game" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_vertical_guides_": [ 1257.0, 42.0 ]
}

[node name="background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 15 )

[node name="enemy_stack" parent="." instance=ExtResource( 4 )]
position = Vector2( 980, 136 )

[node name="enemy_plinths" type="Node2D" parent="."]

[node name="plinth_0" parent="enemy_plinths" instance=ExtResource( 1 )]
position = Vector2( 540, 294 )
z_index = 2

[node name="plinth_1" parent="enemy_plinths" instance=ExtResource( 1 )]
position = Vector2( 739, 294 )
z_index = 2

[node name="enemy_hand" parent="." instance=ExtResource( 2 )]
position = Vector2( 510, 136 )
can_interact = false

[node name="enemy_hearts" type="Node2D" parent="."]
position = Vector2( 50, 80 )
scale = Vector2( 0.8, 0.8 )

[node name="heart_0" parent="enemy_hearts" instance=ExtResource( 8 )]
scale = Vector2( 2, 2 )
texture_empty = ExtResource( 10 )
texture_full = ExtResource( 9 )

[node name="heart_1" parent="enemy_hearts" instance=ExtResource( 8 )]
position = Vector2( 64, 0 )
scale = Vector2( 2, 2 )
texture_empty = ExtResource( 10 )
texture_full = ExtResource( 9 )

[node name="heart_2" parent="enemy_hearts" instance=ExtResource( 8 )]
position = Vector2( 128, 0 )
scale = Vector2( 2, 2 )
texture_empty = ExtResource( 10 )
texture_full = ExtResource( 9 )

[node name="heart_3" parent="enemy_hearts" instance=ExtResource( 8 )]
position = Vector2( 192, 0 )
scale = Vector2( 2, 2 )
texture_empty = ExtResource( 10 )
texture_full = ExtResource( 9 )

[node name="heart_4" parent="enemy_hearts" instance=ExtResource( 8 )]
position = Vector2( 256, 0 )
scale = Vector2( 2, 2 )
texture_empty = ExtResource( 10 )
texture_full = ExtResource( 9 )

[node name="enemy_discard" parent="." instance=ExtResource( 6 )]
position = Vector2( 1380, -84 )

[node name="player_stack" parent="." instance=ExtResource( 4 )]
position = Vector2( 300, 620 )

[node name="player_plinths" type="Node2D" parent="."]
z_index = 1

[node name="plinth_0" parent="player_plinths" instance=ExtResource( 1 )]
position = Vector2( 540, 453 )
z_index = 2

[node name="plinth_1" parent="player_plinths" instance=ExtResource( 1 )]
position = Vector2( 739, 453 )
z_index = 2

[node name="player_hand" parent="." instance=ExtResource( 2 )]
position = Vector2( 510, 620 )
z_index = 3

[node name="player_hearts" type="Node2D" parent="."]
position = Vector2( 1031, 640 )
scale = Vector2( 0.8, 0.8 )

[node name="heart_0" parent="player_hearts" instance=ExtResource( 8 )]
scale = Vector2( 2, 2 )
texture_empty = ExtResource( 10 )
texture_full = ExtResource( 9 )

[node name="heart_1" parent="player_hearts" instance=ExtResource( 8 )]
position = Vector2( 64, 0 )
scale = Vector2( 2, 2 )
texture_empty = ExtResource( 10 )
texture_full = ExtResource( 9 )

[node name="heart_2" parent="player_hearts" instance=ExtResource( 8 )]
position = Vector2( 128, 0 )
scale = Vector2( 2, 2 )
texture_empty = ExtResource( 10 )
texture_full = ExtResource( 9 )

[node name="heart_3" parent="player_hearts" instance=ExtResource( 8 )]
position = Vector2( 192, 0 )
scale = Vector2( 2, 2 )
texture_empty = ExtResource( 10 )
texture_full = ExtResource( 9 )

[node name="heart_4" parent="player_hearts" instance=ExtResource( 8 )]
position = Vector2( 256, 0 )
scale = Vector2( 2, 2 )
texture_empty = ExtResource( 10 )
texture_full = ExtResource( 9 )

[node name="player_discard" parent="." instance=ExtResource( 6 )]
position = Vector2( -100, 400 )

[node name="camera" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true
script = ExtResource( 7 )

[node name="plinth_check_polygon" type="Polygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 500, 250, 775, 250, 775, 475, 500, 475 )

[node name="ui" type="Node2D" parent="."]
z_index = 20

[node name="screen_game" type="Control" parent="ui"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_opponent_name" type="Label" parent="ui/screen_game"]
margin_left = 23.0
margin_top = 14.0
margin_right = 119.0
margin_bottom = 56.0
text = "TEST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texture_rect_opponent" type="TextureRect" parent="ui/screen_game"]
material = ExtResource( 12 )
margin_left = 22.0
margin_top = 110.0
margin_right = 278.0
margin_bottom = 366.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_player_name" type="Label" parent="ui/screen_game"]
margin_left = 1185.0
margin_top = 671.0
margin_right = 1257.0
margin_bottom = 713.0
grow_horizontal = 0
text = "YOU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texture_rect_player" type="TextureRect" parent="ui/screen_game"]
material = ExtResource( 12 )
margin_left = 1128.0
margin_top = 477.0
margin_right = 1384.0
margin_bottom = 733.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speech_bubble" type="NinePatchRect" parent="ui/screen_game"]
visible = false
margin_left = 160.0
margin_top = 211.0
margin_right = 424.0
margin_bottom = 317.0
texture = ExtResource( 13 )
patch_margin_left = 44
patch_margin_top = 49
patch_margin_right = 40
patch_margin_bottom = 31
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_speech" type="RichTextLabel" parent="ui/screen_game/speech_bubble"]
margin_left = 30.0
margin_top = 39.0
margin_right = 252.0
margin_bottom = 82.0
custom_colors/default_color = Color( 0.356863, 0.384314, 0.396078, 1 )
bbcode_enabled = true
visible_characters = 0
percent_visible = 0.0
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_pause" type="Button" parent="ui/screen_game"]
margin_left = 1097.0
margin_top = 30.0
margin_right = 1247.0
margin_bottom = 78.0
text = "PAUSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scroll" parent="ui" instance=ExtResource( 16 )]
position = Vector2( 640, 192 )

[node name="content" type="Control" parent="ui/scroll"]
margin_left = -221.0
margin_top = 40.0
margin_right = 222.0
margin_bottom = 320.0
theme = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="screen_end" type="Control" parent="ui/scroll/content"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_result" type="Label" parent="ui/scroll/content/screen_end"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.0
margin_top = -130.0
margin_right = 119.0
margin_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "You win!"
align = 1

[node name="buttons" type="VBoxContainer" parent="ui/scroll/content/screen_end"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -40.0
margin_right = 100.0
margin_bottom = 112.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_next" type="Button" parent="ui/scroll/content/screen_end/buttons"]
margin_right = 200.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 40 )
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_replay" type="Button" parent="ui/scroll/content/screen_end/buttons"]
margin_top = 60.0
margin_right = 200.0
margin_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 40 )
text = "RESTART"

[node name="button_menu" type="Button" parent="ui/scroll/content/screen_end/buttons"]
visible = false
margin_top = 104.0
margin_right = 200.0
margin_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 40 )
text = "MENU"

[node name="screen_pause" type="Control" parent="ui/scroll/content"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_result" type="Label" parent="ui/scroll/content/screen_pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -130.0
margin_right = 90.0
margin_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Paused"
align = 1

[node name="buttons" type="VBoxContainer" parent="ui/scroll/content/screen_pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -40.0
margin_right = 100.0
margin_bottom = 120.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_continue" type="Button" parent="ui/scroll/content/screen_pause/buttons"]
margin_right = 200.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 40 )
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_restart" type="Button" parent="ui/scroll/content/screen_pause/buttons"]
margin_top = 60.0
margin_right = 200.0
margin_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 40 )
text = "RESTART"

[node name="button_menu" type="Button" parent="ui/scroll/content/screen_pause/buttons"]
margin_top = 120.0
margin_right = 200.0
margin_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 40 )
text = "MENU"

[node name="screen_space" parent="." instance=ExtResource( 18 )]
